--- a/public/index.html
+++ b/public/index.html
@@ -886,7 +886,7 @@
         </div>
     </div>
 
-    <!-- ========== MODAL LABEL ITEM (SINGLE) ========== -->
+    <!-- ========== MODAL LABEL ITEM (SINGLE) - DIUBAH: UKURAN BESAR DAN DETAIL LENGKAP ========== -->
     <div x-show="showLabelModal && canManageItems" 
          x-transition:enter="transition ease-out duration-300"
          x-transition:enter-start="opacity-0 scale-90"
@@ -917,27 +917,24 @@
                         <button @click="labelCopies = Math.min(50, labelCopies + 1)" class="w-8 h-8 flex items-center justify-center bg-slate-100 rounded-lg hover:bg-slate-200"><i class="fas fa-plus text-xs"></i></button>
                     </div>
                 </div>
-                <div class="grid grid-cols-3 gap-2">
-                    <button @click="labelSize = 'small'" :class="labelSize === 'small' ? 'bg-indigo-600 text-white' : 'bg-slate-100 text-slate-700'" class="py-2 px-3 rounded-xl text-sm font-medium">Kecil</button>
-                    <button @click="labelSize = 'medium'" :class="labelSize === 'medium' ? 'bg-indigo-600 text-white' : 'bg-slate-100 text-slate-700'" class="py-2 px-3 rounded-xl text-sm font-medium">Sedang</button>
-                    <button @click="labelSize = 'large'" :class="labelSize === 'large' ? 'bg-indigo-600 text-white' : 'bg-slate-100 text-slate-700'" class="py-2 px-3 rounded-xl text-sm font-medium">Besar</button>
-                </div>
-                <div class="flex items-center gap-4">
-                    <label class="flex items-center gap-1.5 text-sm"><input type="checkbox" x-model="labelShowQR" class="rounded text-indigo-600" checked> QR Code</label>
-                    <label class="flex items-center gap-1.5 text-sm"><input type="checkbox" x-model="labelShowBarcode" class="rounded text-indigo-600"> Barcode</label>
-                </div>
+
+                <!-- Informasi ukuran & format tetap (large + detail) -->
+             
+
+                <!-- Preview sederhana (ukuran large) -->
                 <div class="mt-2 p-4 border-2 border-dashed border-slate-300 rounded-xl bg-slate-50/50">
                     <p class="text-xs font-medium text-slate-500 mb-2">Pratinjau</p>
                     <div class="flex justify-center">
-                        <div class="border border-slate-300 p-3 bg-white shadow-sm flex flex-col items-center justify-center" 
-                             :class="{'w-32 h-20 text-[10px]': labelSize === 'small', 'w-48 h-32 text-sm': labelSize === 'medium', 'w-64 h-48 text-base': labelSize === 'large'}">
+                        <div class="border border-slate-300 p-3 bg-white shadow-sm flex flex-col items-center justify-center w-64 h-48 text-base">
                             <p class="font-bold truncate w-full text-center" x-text="selectedItemForLabel?.article"></p>
                             <p class="truncate w-full text-center text-slate-600" x-text="selectedItemForLabel?.kolom || 'LOKASI'"></p>
                             <p class="text-xs mt-1" x-text="'ID: '+selectedItemForLabel?.id"></p>
-                            <div x-show="labelShowQR" class="mt-1"><div class="w-6 h-6 bg-slate-200 flex items-center justify-center rounded"><i class="fas fa-qrcode text-slate-600 text-xs"></i></div></div>
+                            <div class="mt-1"><div class="w-6 h-6 bg-slate-200 flex items-center justify-center rounded"><i class="fas fa-qrcode text-slate-600 text-xs"></i></div></div>
+                            <div class="mt-1 text-[8px] border border-slate-300 px-2">123456</div>
                         </div>
                     </div>
                 </div>
+
                 <div class="flex gap-3 pt-2">
                     <button @click="printLabels" class="flex-1 bg-gradient-to-r from-indigo-600 to-purple-600 hover:from-indigo-700 hover:to-purple-700 text-white font-semibold py-3 px-4 rounded-xl shadow-md">
                         <i class="fas fa-print mr-2"></i> Cetak <span x-text="labelCopies"></span> Label
@@ -948,7 +945,7 @@
         </div>
     </div>
 
-    <!-- ========== MODAL BULK LABEL ========== -->
+    <!-- ========== MODAL BULK LABEL - DIUBAH: UKURAN BESAR DAN FORMAT DETAILED ========== -->
     <div x-show="showBulkLabelModal && canManageItems" 
          x-transition:enter="transition ease-out duration-300"
          x-transition:enter-start="opacity-0 scale-90"
@@ -999,7 +996,7 @@
                         </button>
                     </div>
                 </div>
-                <!-- Pengaturan -->
+                <!-- Pengaturan (hanya jumlah & info) -->
                 <div class="space-y-5">
                     <div>
                         <label class="block text-slate-700 text-sm font-medium mb-1.5">Label per Item</label>
@@ -1009,26 +1006,15 @@
                             <button @click="bulkLabelCopies = Math.min(10, bulkLabelCopies + 1)" class="w-8 h-8 bg-slate-100 rounded-lg hover:bg-slate-200"><i class="fas fa-plus"></i></button>
                         </div>
                     </div>
-                    <div>
-                        <label class="block text-slate-700 text-sm font-medium mb-1.5">Format</label>
-                        <select x-model="bulkLabelFormat" class="w-full px-4 py-2.5 border border-slate-200 rounded-xl bg-white">
-                            <option value="simple">Simple (tanpa QR)</option>
-                            <option value="standard">Standard (dengan QR)</option>
-                            <option value="detailed">Detailed (lengkap)</option>
-                        </select>
+
+                    <!-- Informasi tetap: ukuran besar & format detailed -->
+               
+
+                    <div class="p-4 bg-purple-50 rounded-xl border border-purple-200">
+                        <p class="font-semibold text-purple-800 mb-1">Ringkasan</p>
+                        <p class="text-sm text-purple-700">Total Label: <span class="font-bold text-lg" x-text="selectedItemsForBulkLabel.length * bulkLabelCopies"></span></p>
                     </div>
-                    <div>
-                        <label class="block text-slate-700 text-sm font-medium mb-1.5">Ukuran</label>
-                        <div class="grid grid-cols-3 gap-2">
-                            <button @click="bulkLabelSize = 'small'" :class="bulkLabelSize === 'small' ? 'bg-indigo-600 text-white' : 'bg-slate-100'" class="py-2 px-3 rounded-xl text-sm">Kecil</button>
-                            <button @click="bulkLabelSize = 'medium'" :class="bulkLabelSize === 'medium' ? 'bg-indigo-600 text-white' : 'bg-slate-100'" class="py-2 px-3 rounded-xl text-sm">Sedang</button>
-                            <button @click="bulkLabelSize = 'large'" :class="bulkLabelSize === 'large' ? 'bg-indigo-600 text-white' : 'bg-slate-100'" class="py-2 px-3 rounded-xl text-sm">Besar</button>
-                        </div>
-                    </div>
-                    <div class="p-4 bg-blue-50 rounded-xl border border-blue-200">
-                        <p class="font-semibold text-blue-800 mb-1">Ringkasan</p>
-                        <p class="text-sm text-blue-700">Total Label: <span class="font-bold text-lg" x-text="selectedItemsForBulkLabel.length * bulkLabelCopies"></span></p>
-                    </div>
+
                     <button @click="printBulkLabels" :disabled="selectedItemsForBulkLabel.length === 0" class="w-full bg-gradient-to-r from-indigo-600 to-purple-600 hover:from-indigo-700 hover:to-purple-700 text-white font-semibold py-3 px-4 rounded-xl shadow-md disabled:opacity-50 flex items-center justify-center gap-2">
                         <i class="fas fa-print"></i> Cetak Label
                     </button>
